# orpie

./: .bzrignore  .gitignore  ChangeLog  Dockerfile  Makefile  Makefile.in  NOTES  README  README.adoc  TODO  aclocal.m4  add.ml  big_int_str.ml  calc_test.ml  configure.in  const.ml  curses-keys.ml  curses_assist.ml  curses_keys.ml  depend  display-sample.txt  div.ml  docker-entrypoint.sh  dune  dune-project  gsl_assist.ml  install.ml.in  interface.ml  interface_draw.ml  interface_main.ml  inv.ml  main.ml  mult.ml  operations.ml  orpie.opam  orpie.spec  orpierc  parse-config.ml  pow.ml  prep-release.sh  (+12 more)
configs/: dist.arch
curses/: Makefile  Makefile.in  README  curses.ml  depend  functions.c  keys.ml  ml_curses.c  ncurses.txt  test.ml
doc/: .arch-inventory  Makefile  TODO  dune  manual.html  manual.tex  manual.tex.in  orpie-curses-keys.1  orpie-curses-keys.tex  orpie.1  orpierc.5  remove-tt.py
etc/: dune  orpierc
gsl/: COPYING  Makefile.in  README  depend  gsl_blas.ml  gsl_blas.mli  gsl_complex.ml  gsl_complex.mli  gsl_error.ml  gsl_error.mli  gsl_fun.ml  gsl_fun.mli  gsl_linalg.ml  gsl_linalg.mli  gsl_math.ml  gsl_math.mli  gsl_matrix.ml  gsl_matrix.mli  gsl_matrix_complex.ml  gsl_matrix_complex.mli  gsl_matrix_complex_flat.ml  gsl_matrix_complex_flat.mli  gsl_matrix_flat.ml  gsl_matrix_flat.mli  gsl_permut.ml  gsl_permut.mli  gsl_sf.ml  gsl_vectmat.ml  gsl_vectmat.mli  gsl_vector.ml  gsl_vector.mli  gsl_vector_complex.ml  gsl_vector_complex.mli  gsl_vector_complex_flat.ml  gsl_vector_complex_flat.mli  gsl_vector_flat.ml  (+37 more)
src/orpie/: big_int_str.ml  calc_test.ml  dune  install.ml.in  interface.ml  interface_draw.ml  interface_main.ml  operations.ml  rcfile.ml  rpc_calc.ml  rpc_stack.ml  solvelin.ml  txtin_parser.mly  utility.ml
(+37 files in other folders)
